[package]
name = "txt2bp"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
clap = { version = "4", features = ["derive"] }
colored = "2"
# cosmic-text = "0.12.1"
cosmic-text = { git = "https://github.com/pop-os/cosmic-text.git" }
flate2 = "1.0.33"
heck = "0.5.0"
paste = "1.0.15"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
text2bp_macros = { path = "text2bp_macros" }
